--- a/config/base.yaml
+++ b/config/base.yaml
@@ -1,3 +1,5 @@
 app_name: "Konnect Backend V1"
 log_level: "INFO"
 database_url: "postgresql+psycopg2://postgres:KonnectP2025@database-1.c50ic0y6kfw3.ap-northeast-2.rds.amazonaws.com/postgres"
+OLLAMA_URL: "http://localhost:11434"
+OLLAMA_MODEL: "llama2"
