--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,59 @@
-fastapi>=0.100.0
-uvicorn[standard]>=0.22.0
-SQLAlchemy>=1.5
-psycopg2>=2.9
-pydantic>=1.10
-pyyaml>=6.0
-python-multipart==0.0.9
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aiohttp-retry==2.9.1
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.7.0
+async-timeout==4.0.3
+attrs==25.1.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.7
+distro==1.9.0
+exceptiongroup==1.2.2
+fastapi==0.115.6
+frozenlist==1.5.0
+greenlet==3.1.1
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+jiter==0.8.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.18
+langchain-core==0.3.35
+langchain-openai==0.3.5
+langchain-text-splitters==0.3.6
+langsmith==0.3.8
+multidict==6.1.0
+numpy==1.26.4
+openai>=1.68.2
+orjson==3.10.15
+packaging==24.2
+propcache==0.2.1
+pydantic==2.10.4
+pydantic_core==2.27.2
+PyJWT==2.10.1
+python-dotenv==1.0.1
+PyYAML==6.0.2
+redis==5.0.1
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+sniffio==1.3.1
+SQLAlchemy==2.0.38
+starlette==0.41.3
+tenacity==9.0.0
+tiktoken==0.8.0
+tqdm==4.67.1
+twilio==9.6.1
+typing_extensions==4.12.2
+urllib3==2.3.0
+uvicorn==0.34.0
+websockets==15.0.1
+yarl==1.18.3
+zstandard==0.23.0
+watchdog
+
 boto3>=1.30.0
-requests==2.32.1
-openai>=1.41.0
-httpx>=0.27.0
-
-
-# pydantic[email]==2.6.3
-
